# SMARTpy_uv

./: .readthedocs.yaml  README.md  pyproject.toml
Probes/: O_SiF2_6_linear.mol2  S_SiF2_10_acyclic.mol2  S_SiF2_11_cyclic.mol2  S_SiF2_12_acyclic.mol2  S_SiF2_9_cyclic.mol2  S_SiH2_10_acyclic.mol2  S_SiH2_10_cyclic.mol2  S_SiH2_11_cyclic.mol2  S_SiH2_8_cyclic.mol2  S_SiI2_10_cyclic.mol2  S_SiI2_8_cyclic.mol2
SMART/: 8dsg_S_SiH2_8_cyclic_cavity.sdf  8dsg_S_SiH2_8_cyclic_cplx.sdf  8dsg_trunc.mol2  8w8r_O_SiF2_6_linear_cavity.sdf  SMART_protein.py  SMART_protein_2.py  __init__.py  chimera_descriptors.py  conf_search.py  descriptors.py  enzyme.xlsx  enzyme_properties.py  probe.py  protein.xlsx  setup.cfg  utils.py
SMART/Probes/: S_SiI2_12_acyclic.mol2  S_SiI2_8_acyclic.mol2
SMART/examples/: MM_cplx.sdf  SMART.ipynb  rdkit_mol.sdf  run_mult_structures.py
SMART/modules/: probe.py
SMART/modules/templates/: S_SiF2_10_cyclic.sdf  S_SiH2_10_cyclic.sdf  S_SiH2_8_cyclic.sdf
SMART/test/: R-TCPTTL_1.mol2  R-TCPTTL_1_S_SiF2_8_cyclic_cavity.sdf  R-TCPTTL_1_S_SiF2_8_cyclic_cplx.sdf
__SMART__/: README  run_SMART.py
__SMART__/modules/: SMART.ipynb  (+7 more)
docs/: conf.py  config.py  index.rst  installation.rst  requirements.txt
examples/: 8dsg.xlsx  SMART_enzyme.py  cat.mol2  protein_properties.py
examples2/: R-TCPTTL_1.sdf  rdkit_cplx.sdf  run_single_structure.py
source/: conf.py  getting_started.rst  index.rst  installation.rst  requirements.rst
templates/: O_SiH2_6_linear.sdf  S_SiF2_10_acyclic.sdf  S_SiH2_10_acyclic.sdf  S_SiH2_12_cyclic.sdf
test/: OUT.xlsx  PARAMS.txt
(+1803 files in other folders)
