[project]
name = "smartpy-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dbstep>=1.1.0",
    "mathutils>=3.3.0",
    "morfeus>=0.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyvista>=0.44.2",
    "rdkit>=2024.9.6",
    "scipy>=1.15.2",
]
