[metadata]
name = SMARTpy (Spatial Molding for Approachable Rigid Targets) Molecular Descriptors
version = 0.0.1
author = Beck R. Miller
author_email = beck.miller@utah.edu
description = Parametrize molecular complex cavity steric environments with a molecular probe
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.10
include_package_data = True
